Обновил комментарии swagger
Добавил больше информативности в поле отправки запроса
