# docs/swagger.json
@@ -22,7 +22,7 @@
                 "parameters": [
                     {
                         "description": "tests for spelling",
-                        "name": "input",
+                        "name": "texts",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -34,13 +34,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "type": "string"
-                                }
-                            }
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -67,7 +61,15 @@
     },
     "definitions": {
         "controllers.SpelingRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "texts": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
         }
     },
     "x-extension-openapi": {
